--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8090
+  port: 8094
   use-forward-headers: true
   undertow:
     io-threads: 2
@@ -15,26 +15,26 @@ spring:
   # H2DATABASE配置
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    schema: classpath:/db/schema-h2.sql
-    data: classpath:/db/data-h2.sql
-    url: jdbc:h2:file:~/test/test
-    username: root
-    password: 123456
-    platform: h2
-    initialization-mode: always
-    continue-on-error: true
-  h2:
-    console:
-      settings:
-        web-allow-others: true
-      path: /h2-console
-      enabled: true
-
-    #MySql配置
-#    driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://47.95.210.109:3306/viewer?characterEncoding=utf8&useSSL=false
+#    schema: classpath:/db/schema-h2.sql
+#    data: classpath:/db/data-h2.sql
+#    url: jdbc:h2:file:~/test/test
 #    username: root
 #    password: 123456
+#    platform: h2
+#    initialization-mode: always
+#    continue-on-error: true
+#  h2:
+#    console:
+#      settings:
+#        web-allow-others: true
+#      path: /h2-console
+#      enabled: true
+
+    #MySql配置
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://47.95.210.109:3306/aikefu?characterEncoding=utf8&useSSL=false
+    username: root
+    password: 123456
 
 #mybatis
 mybatis-plus:
